--- a/resources/index.css
+++ b/resources/index.css
@@ -66,7 +66,7 @@ li {
 
 #Projects {
     
-    top: 20%;
+    top: 5%;
     text-align: left;
     position:absolute;
     margin-left:5%;
@@ -76,10 +76,11 @@ li {
 
 .projD {
     text-align: left;
-    right:50%;
+    margin-right: 80%;
     position:absolute;
     margin-left:5%;
-    top:50%;
+    top: 16%;
+    
 
 }
 
@@ -97,7 +98,7 @@ li {
     text-align: center;
     top: 40%;
     position:absolute;
-    margin-left: 47%;
+    margin-left: 45%;
     
 
 }
@@ -107,5 +108,58 @@ a {
 
 }
 
+#Contact {
+    background-color: #596e79;
+    position: relative;
+    height: 100px;
+
+}
+
+.fa-instagram {
+  
+    color: white;
+    top:50%;
+    position:absolute;
+    
+  }
+
+  .fa {
+    
+    font-size: 30px;
+    margin-left: 50%;
+    text-align: center;
+    text-decoration: none;
+
+    
+  }
+
+  .fa-google {
+    top: 50%;
+    color: white;
+    position: absolute;
+    margin-left: 45%;
+
+  }
+
+  .phone {
+    font-size: 15px;
+    position: absolute;
+    margin-left: 5%;
+    top:50%;
+    color:white;
+
+  }
+
+  @media (max-width: 767px) {
+ 
+    /* ... */
+ 
+    .top-content .carousel-control-prev, 
+    .top-content .carousel-control-next { display: none; }
+    .top-content .carousel-indicators li { margin-left: 10px; margin-right: 10px; }
+ 
+    /* ... */
+ 
+}
 
 
