--- a/resources/index.css
+++ b/resources/index.css
@@ -1,3 +1,7 @@
+.container-fluid {
+    padding:0;
+
+}
 
 
 #onesec {
@@ -15,7 +19,7 @@
 #name {
     
     top: 60%;
-    position:sticky;
+    position:absolute;
     margin-left: 5%;
 }
 
@@ -157,5 +161,6 @@ a {
     /* ... */
  
 }
+
 
 
