--- a/resources/index.css
+++ b/resources/index.css
@@ -70,11 +70,12 @@ li {
 
 .projD {
     
-    top: 75%;
+    top: 65%;
     position:absolute;
-    margin-left: 5%;
-    text-align: left;
+    
+    text-align: center;
     right:20%;
+    left:20%;
 
 }
 
