--- a/resources/index.css
+++ b/resources/index.css
@@ -4,7 +4,7 @@
 
     background-color: #f0ece3; 
     
-    color:rgb(155, 144, 144);   
+    color:#596e79;   
     font-family: Consolas;
     position: relative;
     height:600px;
@@ -52,7 +52,7 @@ li {
     color:#596e79;   
     font-family: Consolas;
     position: relative;
-    height:900px;
+    height:700px;
     margin:0;
     
 
