--- a/resources/index.css
+++ b/resources/index.css
@@ -7,7 +7,7 @@
     color:#596e79;   
     font-family: Consolas;
     position: relative;
-    height: 400px;
+    height: 100%;
     margin: 0;
 
 }
@@ -50,7 +50,7 @@ li {
     color:#596e79;   
     font-family: Consolas;
     position: relative;
-    height: 650px;
+    height: 100%;
     margin: 0;
     
 
@@ -87,16 +87,20 @@ a {
 
 #Contact {
     background-color: #596e79;
-    
-    height: 90px;
+    position: sticky;
     text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 0px;
 
 }
 
 .fa-instagram {
   
     color: white;
-    text-align: center;
+    
     
     
   }
@@ -104,8 +108,9 @@ a {
   .fa {
     
     font-size: 30px;
+    margin-top: 2%;
+    margin-bottom: 2%;
     
-    text-align: center;
     
 
     
