--- a/resources/index.css
+++ b/resources/index.css
@@ -26,21 +26,36 @@
 }
 
 .menu {
-    list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333333;
-  position: absolute;
-  left: 74.5%;
-  color:white;
+    
   
+  background-color: #333333;
+  
+  
+  
+  color:white;
+  text-align: right;
+  
+  font-family: Consolas;
+
 
 }
-li {
-    float: right;
-    padding: 10px;
 
+li {
+
+    display: inline;
+    padding: 5px;
+    
+
+}
+
+ul {
+    
+    
+    margin: 0;
+    padding: 5px;
+    list-style-type: none;
+    
+    
 }
 
 #twosec {
