--- a/resources/index.css
+++ b/resources/index.css
@@ -36,6 +36,8 @@
   text-align: right;
   
   font-family: Consolas;
+  width: 25%;
+  margin-left: 75%;
 
 
 }
@@ -109,6 +111,7 @@ a {
     width: 100%;
     height: 100%;
     margin-bottom: 0px;
+    color:white;
 
 }
 
@@ -132,12 +135,26 @@ a {
   }
 
   .fa-google {
-   text-align: center;
+
     color: white;
     
     
 
   }
+
+  .fa-linkedin {
+    color: white;
+  
+}
+
+  #copyR {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 12px;
+
+  }
+
+  
 
   
 
