--- a/resources/index.css
+++ b/resources/index.css
@@ -37,11 +37,12 @@
   
   
   color:white;
-  text-align: right;
-  
+  text-align: center;
+  width:auto;
+  margin-left: 82%;
+    
   font-family:  'Mukta Vaani', sans-serif;
-  width: 25%;
-  margin-left: 75%;
+ 
 
 
 }
