--- a/resources/index.css
+++ b/resources/index.css
@@ -24,8 +24,9 @@
 
 .aboutme    {
     
-    text-align: left;
-    width: 80%;
+    text-align: center;
+    width: auto;
+    margin-right: 77%;
     
 }
 
