--- a/resources/index.css
+++ b/resources/index.css
@@ -20,6 +20,8 @@
     border-bottom-color: #c7b198;
     border-bottom-style: groove;
     padding-bottom: 5px;
+    font-size: xx-large;
+    padding-left:auto;
     /*position: relative;*/
 }
 
